[gd_scene load_steps=4 format=2]

[ext_resource path="res://2d-dados/castillo.png" type="Texture" id=1]
[ext_resource path="res://2d-mapaTW/malo.gd" type="Script" id=2]
[ext_resource path="res://2d-dados/caballo.png" type="Texture" id=3]

[node name="malo" type="Node2D"]
position = Vector2( 360, 150 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 1 )
centered = false

[node name="Sprite2" type="Sprite" parent="."]
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 3 )
centered = false

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 335.0
margin_bottom = 292.0

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="TimerR" type="Timer" parent="."]

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerR" to="." method="_on_TimerR_timeout"]
